--- a/database/config.json
+++ b/database/config.json
@@ -2,14 +2,14 @@
   "development": {
     "username": "root",
     "password": "12345678",
-    "database": "whatatest",
+    "database": "q",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "12345678",
-    "database": "whatatest1",
+    "database": "q",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
