--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "q server based on eggjs",
   "dependencies": {
     "egg": "2.10.0",
+    "egg-passport": "^2.0.1",
+    "egg-passport-github": "^1.0.0",
     "egg-scripts": "^2.5.0",
     "egg-sequelize": "^4.0.7",
+    "lodash": "^4.17.10",
     "mysql2": "^1.6.1"
   },
   "devDependencies": {
@@ -24,6 +27,7 @@
   "scripts": {
     "autod": "autod",
     "lint": "eslint .",
+    "dev": "egg-bin dev",
     "test": "egg-bin test",
     "cov": "egg-bin cov",
     "ci": "npm run lint && NODE_ENV=test npx sequelize db:migrate && npm run cov",
