--- a/run/agent_config.json
+++ b/run/agent_config.json
@@ -73,7 +73,7 @@
     "onerror": {
       "errorPageUrl": "",
       "appErrorFilter": null,
-      "templatePath": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
+      "templatePath": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
     },
     "i18n": {
       "defaultLocale": "en_US",
@@ -85,8 +85,8 @@
     "watcher": {
       "type": "development",
       "eventSources": {
-        "default": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-watcher\\lib\\event-sources\\default",
-        "development": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-watcher\\lib\\event-sources\\development"
+        "default": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-watcher\\lib\\event-sources\\default",
+        "development": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-watcher\\lib\\event-sources\\development"
       }
     },
     "multipart": {
@@ -110,7 +110,7 @@
     "customLogger": {
       "scheduleLogger": {
         "consoleLevel": "NONE",
-        "file": "D:\\workspace\\koa\\q-egg\\logs\\q-egg\\egg-schedule.log"
+        "file": "D:\\workspace\\nodejs\\egg\\q-egg\\logs\\q-egg\\egg-schedule.log"
       }
     },
     "logrotator": {
@@ -124,14 +124,14 @@
     },
     "static": {
       "prefix": "/public/",
-      "dir": "D:\\workspace\\koa\\q-egg\\app\\public",
+      "dir": "D:\\workspace\\nodejs\\egg\\q-egg\\app\\public",
       "dynamic": true,
       "preload": false,
       "buffer": false,
       "maxFiles": 1000
     },
     "view": {
-      "root": "D:\\workspace\\koa\\q-egg\\app\\view",
+      "root": "D:\\workspace\\nodejs\\egg\\q-egg\\app\\view",
       "cache": false,
       "defaultExtension": ".html",
       "defaultViewEngine": "",
@@ -143,7 +143,7 @@
       "host": "localhost",
       "port": "3306",
       "username": "root",
-      "password": "<String len: 8>",
+      "password": "<String len: 6>",
       "timezone": "+08:00"
     },
     "passportGithub": {
@@ -218,9 +218,9 @@
       "author": "Jack Bai",
       "private": true
     },
-    "baseDir": "D:\\workspace\\koa\\q-egg",
-    "HOME": "C:\\Users\\panguso",
-    "rundir": "D:\\workspace\\koa\\q-egg\\run",
+    "baseDir": "D:\\workspace\\nodejs\\egg\\q-egg",
+    "HOME": "C:\\Users\\Jack Bai",
+    "rundir": "D:\\workspace\\nodejs\\egg\\q-egg\\run",
     "dump": {
       "ignore": "<Set>"
     },
@@ -250,7 +250,7 @@
       }
     },
     "logger": {
-      "dir": "D:\\workspace\\koa\\q-egg\\logs\\q-egg",
+      "dir": "D:\\workspace\\nodejs\\egg\\q-egg\\logs\\q-egg",
       "encoding": "utf8",
       "env": "local",
       "level": "INFO",
@@ -326,8 +326,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-session",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-session",
       "version": "3.1.0"
     },
     "security": {
@@ -339,9 +339,9 @@
         "session"
       ],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-security",
-      "version": "2.4.0"
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-security",
+      "version": "2.3.1"
     },
     "jsonp": {
       "enable": true,
@@ -352,8 +352,8 @@
         "security"
       ],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-jsonp",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-jsonp",
       "version": "2.0.0"
     },
     "onerror": {
@@ -365,8 +365,8 @@
         "jsonp"
       ],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-onerror",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-onerror",
       "version": "2.1.0"
     },
     "i18n": {
@@ -376,8 +376,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-i18n",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-i18n",
       "version": "2.0.0"
     },
     "watcher": {
@@ -387,8 +387,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-watcher",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-watcher",
       "version": "3.0.0"
     },
     "multipart": {
@@ -398,8 +398,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-multipart",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-multipart",
       "version": "2.1.0"
     },
     "development": {
@@ -413,8 +413,8 @@
       "env": [
         "local"
       ],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-development",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-development",
       "version": "2.4.1"
     },
     "schedule": {
@@ -424,8 +424,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-schedule",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-schedule",
       "version": "3.4.0"
     },
     "logrotator": {
@@ -437,8 +437,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-logrotator",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-logrotator",
       "version": "3.0.3"
     },
     "static": {
@@ -448,8 +448,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-static",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-static",
       "version": "2.1.1"
     },
     "view": {
@@ -459,8 +459,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-view",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-view",
       "version": "2.1.0"
     },
     "sequelize": {
@@ -470,8 +470,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-sequelize",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-sequelize",
       "version": "4.0.7"
     },
     "passport": {
@@ -483,8 +483,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-passport",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-passport",
       "version": "2.0.1"
     },
     "passportGithub": {
@@ -496,8 +496,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-passport-github",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-passport-github",
       "version": "1.0.0"
     }
   }
