--- a/run/application_config.json
+++ b/run/application_config.json
@@ -7,7 +7,6 @@
       "encrypt": true,
       "overwrite": true,
       "signed": true,
-      "autoCommit": true,
       "encode": "<Function encode>",
       "decode": "<Function decode>",
       "genid": "<Function anonymous>"
@@ -86,28 +85,28 @@
     "onerror": {
       "errorPageUrl": "",
       "appErrorFilter": null,
-      "templatePath": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
+      "templatePath": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
     },
     "i18n": {
       "defaultLocale": "en_US",
       "dirs": [
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-session\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-security\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-jsonp\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-onerror\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-i18n\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-watcher\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-multipart\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-development\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-schedule\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-logrotator\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-static\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-view\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-sequelize\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-passport\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg-passport-github\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\locales",
-        "D:\\workspace\\koa\\q-egg\\config\\locales"
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-session\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-security\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-jsonp\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-onerror\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-i18n\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-watcher\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-multipart\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-development\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-schedule\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-logrotator\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-static\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-view\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-sequelize\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-passport\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-passport-github\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\locales",
+        "D:\\workspace\\nodejs\\egg\\q-egg\\config\\locales"
       ],
       "queryField": "locale",
       "cookieField": "locale",
@@ -117,8 +116,8 @@
     "watcher": {
       "type": "development",
       "eventSources": {
-        "default": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-watcher\\lib\\event-sources\\default",
-        "development": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-watcher\\lib\\event-sources\\development"
+        "default": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-watcher\\lib\\event-sources\\default",
+        "development": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-watcher\\lib\\event-sources\\development"
       }
     },
     "multipart": {
@@ -142,7 +141,7 @@
     "customLogger": {
       "scheduleLogger": {
         "consoleLevel": "NONE",
-        "file": "D:\\workspace\\koa\\q-egg\\logs\\q-egg\\egg-schedule.log"
+        "file": "D:\\workspace\\nodejs\\egg\\q-egg\\logs\\q-egg\\egg-schedule.log"
       }
     },
     "logrotator": {
@@ -156,7 +155,7 @@
     },
     "static": {
       "prefix": "/public/",
-      "dir": "D:\\workspace\\koa\\q-egg\\app\\public",
+      "dir": "D:\\workspace\\nodejs\\egg\\q-egg\\app\\public",
       "dynamic": true,
       "preload": false,
       "buffer": false,
@@ -164,7 +163,7 @@
       "files": "<LRU>"
     },
     "view": {
-      "root": "D:\\workspace\\koa\\q-egg\\app\\view",
+      "root": "D:\\workspace\\nodejs\\egg\\q-egg\\app\\view",
       "cache": false,
       "defaultExtension": ".html",
       "defaultViewEngine": "",
@@ -176,7 +175,7 @@
       "host": "localhost",
       "port": "3306",
       "username": "root",
-      "password": "<String len: 8>",
+      "password": "<String len: 6>",
       "timezone": "+08:00"
     },
     "passportGithub": {
@@ -260,9 +259,9 @@
       "author": "Jack Bai",
       "private": true
     },
-    "baseDir": "D:\\workspace\\koa\\q-egg",
-    "HOME": "C:\\Users\\panguso",
-    "rundir": "D:\\workspace\\koa\\q-egg\\run",
+    "baseDir": "D:\\workspace\\nodejs\\egg\\q-egg",
+    "HOME": "C:\\Users\\Jack Bai",
+    "rundir": "D:\\workspace\\nodejs\\egg\\q-egg\\run",
     "dump": {
       "ignore": "<Set>"
     },
@@ -293,7 +292,7 @@
       "returnRawBody": true
     },
     "logger": {
-      "dir": "D:\\workspace\\koa\\q-egg\\logs\\q-egg",
+      "dir": "D:\\workspace\\nodejs\\egg\\q-egg\\logs\\q-egg",
       "encoding": "utf8",
       "env": "local",
       "level": "INFO",
@@ -388,8 +387,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-session",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-session",
       "version": "3.1.0"
     },
     "security": {
@@ -401,9 +400,9 @@
         "session"
       ],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-security",
-      "version": "2.4.0"
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-security",
+      "version": "2.3.1"
     },
     "jsonp": {
       "enable": true,
@@ -414,8 +413,8 @@
         "security"
       ],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-jsonp",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-jsonp",
       "version": "2.0.0"
     },
     "onerror": {
@@ -427,8 +426,8 @@
         "jsonp"
       ],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-onerror",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-onerror",
       "version": "2.1.0"
     },
     "i18n": {
@@ -438,8 +437,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-i18n",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-i18n",
       "version": "2.0.0"
     },
     "watcher": {
@@ -449,8 +448,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-watcher",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-watcher",
       "version": "3.0.0"
     },
     "multipart": {
@@ -460,8 +459,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-multipart",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-multipart",
       "version": "2.1.0"
     },
     "development": {
@@ -475,8 +474,8 @@
       "env": [
         "local"
       ],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-development",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-development",
       "version": "2.4.1"
     },
     "schedule": {
@@ -486,8 +485,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-schedule",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-schedule",
       "version": "3.4.0"
     },
     "logrotator": {
@@ -499,8 +498,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-logrotator",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-logrotator",
       "version": "3.0.3"
     },
     "static": {
@@ -510,8 +509,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-static",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-static",
       "version": "2.1.1"
     },
     "view": {
@@ -521,8 +520,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-view",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-view",
       "version": "2.1.0"
     },
     "sequelize": {
@@ -532,8 +531,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-sequelize",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-sequelize",
       "version": "4.0.7"
     },
     "passport": {
@@ -545,8 +544,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-passport",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-passport",
       "version": "2.0.1"
     },
     "passportGithub": {
@@ -558,8 +557,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\workspace\\koa\\q-egg\\config\\plugin.js",
-      "path": "D:\\workspace\\koa\\q-egg\\node_modules\\egg-passport-github",
+      "from": "D:\\workspace\\nodejs\\egg\\q-egg\\config\\plugin.js",
+      "path": "D:\\workspace\\nodejs\\egg\\q-egg\\node_modules\\egg-passport-github",
       "version": "1.0.0"
     }
   }
