--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,11 @@
   "extends": "eslint-config-egg",
   "rules": {
     "semi": ["error","never"]
+  },
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "sourceType": "module",
+    "allowImportExportEverywhere": false,
+    "codeFrame": true
   }
 }
