--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
     "autod": "^3.0.1",
     "autod-egg": "^1.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "egg-bin": "^4.3.7",
     "egg-mock": "^3.19.2",
     "eslint": "^4.18.1",
     "eslint-config-egg": "^7.0.0",
     "factory-girl": "^5.0.2",
+    "regenerator-runtime": "^0.13.1",
     "sequelize-cli": "^4.0.0"
   },
   "engines": {
